# aws-c-auth

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  builder.json
.builder/action/: auth-ci-prep.py  aws-c-auth-test-prep.py  aws-c-auth-test.py  mock_server_setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  codecov.yml  stale_issue.yml
cmake/: aws-c-auth-config.cmake
codebuild/: common-posix.sh  common-windows.bat
include/aws/auth/: auth.h  aws_imds_client.h  credentials.h  exports.h  identity.h  signable.h  signable_constants.h  signer.h  signing.h  signing_config.h  signing_result.h
include/aws/auth/private/: aws_http_credentials_provider.h  aws_profile.h  aws_signing.h  cJSON.h  credentials_query.h  credentials_utils.h  key_derivation.h  login_token_utils.h  sigv4_http_request.h  sso_token_providers.h  sso_token_utils.h  xml_parser.h
source/: auth.c  aws_http_credentials_provider.c  aws_imds_client.c  aws_profile.c  aws_signing.c  cJSON.c  crdential_provider_delegate.c  crdential_provider_revert.c  credentials.c  credentials_provider_anonymous.c  credentials_provider_cached.c  credentials_provider_chain.c  credentials_provider_cognito.c  credentials_provider_default_chain.c  credentials_provider_delegate.c  credentials_provider_ecs.c  credentials_provider_environment.c  credentials_provider_imds.c  credentials_provider_login.c  credentials_provider_process.c  credentials_provider_profile.c  credentials_provider_sso.c  credentials_provider_static.c  credentials_provider_sts.c  credentials_provider_sts_web_identity.c  credentials_provider_x509.c  credentials_query.c  credentials_utils.c  identity.c  key_derivation.c  login_token_utils.c  signable.c  signable_chunk.c  signable_constants.c  signable_http_request.c  signable_trailer.c  signer.c  signing.c  signing_config.c  signing_result.c  (+7 more)
tests/: CMakeLists.txt  aws_imds_client_test.c  aws_profile_fatal_parse_tests.c  aws_profile_tests.c  credentials_provider_cognito_tests.c  credentials_provider_ecs_tests.c  credentials_provider_imds_tests.c  credentials_provider_login_tests.c  credentials_provider_process_tests.c  credentials_provider_sso_tests.c  credentials_provider_sts_tests.c  credentials_provider_sts_web_identity_tests.c  credentials_provider_utils.c  credentials_provider_utils.h  credentials_provider_x509_tests.c  credentials_tests.c  credentials_utils_tests.c  key_derivation_tests.c  seed_tests.py  shared_credentials_test_definitions.h  sigv4_new.c  sigv4_signing_tests.c  sigv4_tests.c  soo_token_provider_profile_tests.c  soo_token_provider_tests.c  sso_token_util_tests.c  test_chunked_signing.c  test_event_signing.c  test_signable.c  test_signable.h  token_provider_sso_tests.c  xml_parser_test.c
tests/aws-sig-v4-test-suite/: NOTICE
tests/aws-sig-v4-test-suite/get-vanilla-with-session-token/: get-vanilla-with-session-token.sreq
tests/aws-signing-test-suite/v4/get-header-key-duplicate/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-header-value-multiline/: context.json  header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-header-value-order/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-header-value-trim/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-relative-normalized/: header-signed-request.txt  query-signed-request.txt
tests/aws-signing-test-suite/v4/get-relative-relative-normalized/: header-signed-request.txt  query-signed-request.txt
tests/aws-signing-test-suite/v4/get-relative-relative-unnormalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-relative-unnormalized/: context.json  header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-slash-dot-slash-normalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt
tests/aws-signing-test-suite/v4/get-slash-dot-slash-unnormalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-slash-normalized/: context.json  header-signed-request.txt  query-signed-request.txt
tests/aws-signing-test-suite/v4/get-slash-pointless-dot-normalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-slash-pointless-dot-unnormalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-slash-unnormalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-slashes-normalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-slashes-unnormalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-space-normalized/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt
tests/aws-signing-test-suite/v4/get-space-unnormalized/: header-signed-request.txt  query-signed-request.txt  query-string-to-sign.txt
tests/aws-signing-test-suite/v4/get-unreserved/: header-signed-request.txt  query-canonical-request.txt  query-signed-request.txt  (+1 more)
tests/fuzz/: parse_config_profile.c  parse_credentials_profile.c
tests/mock_server/: credentials_provider_ecs_success_response.json  mock_auth_server.py
(+265 files in other folders)
